Police Officer service and service Implementation with the delete api